tests/whiley/valid/test_1143.wyal
type tac1tup is ({int f1, int f2} $)
where:
    $.f1 < $.f2


function f() -> (tac1tup $)

assert "assertion failed":
    forall(tac1tup x, tac1tup x$1):
        if:
            x == f()
            x$1 == x{f1:=x.f2 - 2}
        then:
            x$1.f1 != x$1.f2


